ant performance optimizations: avoid using isDirectory(), additional caching of taskdef's classpaths, inline PsiTreeUtil.getParentOfType()